--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # testing
 /coverage
 
+# user spesicif stuff
+.idea/workspace.xml
+.idea/jsLibraryMappings.xml
 
 # production
 /build
@@ -19,7 +22,7 @@
 .env.test.local
 .env.production.local
 .yarn.lock
-.idea
+
 
 npm-debug.log*
 yarn-debug.log*
